# RO-SE

./: .gitignore  .gitmodules  CMakeLists.txt  GenProj.bat  LICENSE.md  README.md  ROSE.sln  musicBuffer.cpp  musicBuffer.h  soundBuffer.cpp  soundBuffer.h  soundDevice.cpp  soundDevice.h  soundSource.cpp  soundSource.h
Example/: CMakeLists.txt  Example.vcxproj  example_impl.cpp
Examples/: example_impl.cpp
ROSE/: CMakeLists.txt  ROSE.h  ROSE.vcxproj  musicBuffer.cpp  musicBuffer.h  soundBuffer.cpp  soundBuffer.h  soundDevice.cpp  soundDevice.h  soundSource.cpp  soundSource.h
